--- a/Web Project/reserve.css
+++ b/Web Project/reserve.css
@@ -42,12 +42,16 @@ body {
 /* content style */
 .main .content{
   /* background: lightpink; */
-  width: 70%;
+  width: 90%;
   margin: 0 auto;
-  padding: 30px;
+  padding: 20px;
   position: relative;
+  
 }
-
+.main .content .guide{
+  /* border: 1px solid #000; */
+  padding: 20px;
+}
 .main .content h3{
   font-size: 1.2em;
   margin: 20px 0;
@@ -56,24 +60,27 @@ body {
 .main .content .backup {
   border: 1px solid #d9d9d9;
   padding: 40px;
+  display: flex;
   
 }
 .main .content .backup li {
-  float: left;
+  /* float: left; */
   /* border: 1px solid #ccc;  */
   width: 30%;
   /* height: fit-content; */
   margin: 0 1%;
   /* padding: 20px; */
-  text-align: center;
+  text-align: center; 
+  justify-content: space-evenly;
+  position: relative;;
 }
 .main .content .backup li .icon{
-  border: 0;
+  border: 1px solid #ccc;
   background-color: #fafaf8 !important;
-  width: 80px;
-  height: 80px;
+  width: 90px;
+  height: 90px;
   border-radius: 100%;
-  margin: 10px auto;
+  margin: 20px auto;
 }
 .main .content .backup li .icon1 {
   background: url('visut-guide01.png') no-repeat center/ 40px;
@@ -107,18 +114,21 @@ body {
 .main .content .backup li:nth-child(3)::before{
   content: '';
   background: url('guide-arrow.png') no-repeat center / 50px;
-  /* border: 1px solid #000; */
   width: 7%;
   height: 50px;
   float: left;
-  margin-top: 95px;
+  /* margin-top: 95px; */
+  position: absolute;
+  left: -10%;
+  top: 50%;
 }
 .main .content .backup a{
+  font-weight: 700;
   border: 1px solid #000;
   border-radius: 5px;
-  display: inline-block;
-  padding: 15px 30px;
-  transition: 0.5s;
+  /* display: block; */
+  padding: 10px 30px;
+  transition: 0.4s;
 }
 .main .content .backup a:hover{
   background: #000;
@@ -155,6 +165,8 @@ body {
 
 .main .content .bottom a{
   border: 1px solid #5aafae;
+  font-weight: 700;
+  letter-spacing: -1px;
   color: #5aafae;
   border-radius: 5px;
   width: 150px;
