--- a/Web Project/pickup.css
+++ b/Web Project/pickup.css
@@ -1,6 +1,7 @@
 body{
   font-size: 14px;
   /* text-align: center; */
+  position: relative;
 }
 
 /* #fafaf8  #5aafae */
@@ -30,8 +31,17 @@ body{
 .container .bar {
   width: 100%;
   margin: 0 auto;
-  padding: 30px;
+  /* padding: 20px; */
   border-bottom: 1px solid #d9d9d9;
+}
+.container .bar section{
+  border: 1px solid #000;
+
+  margin: 0 auto;
+  padding-left: 60px;
+  box-sizing: border-box;
+  height: 60px;
+  position: relative;
 }
 /* 메인 콘텐츠 */
 .container .middle {
@@ -72,7 +82,7 @@ letter-spacing: -1px;
 }
 .middle .content ul {
   /* background: lightcyan; */
-  padding: 30px;
+  padding: 30px 50px;
   /* position: relative; */
   width: 80%;
   margin: 0 auto;
@@ -92,13 +102,13 @@ letter-spacing: -1px;
 }
 
 .middle .content ul li .icon {
-  background: skyblue;
+  /* background: skyblue; */
   margin: 10px auto;
   width: 80px;
   height: 80px;
   border: 1px solid #d9d9d9;
   border-radius: 50%;
-
+  background-color: #fafaf8 ;
 }
 .middle .content ul li .icon1{
   background: url('delivery-ico01.png') no-repeat center / 40px;
@@ -152,4 +162,65 @@ letter-spacing: -1px;
 .container .bottom a:hover{
   color:#fff;
   background: #5aafae;
+}
+
+
+/* quickmenu */
+.container .middle{
+  position: relative;
+}
+.container .middle .quickmenu {
+  position: fixed;
+  top: 30%;
+  /* position: absolute; */
+  right: 20px;
+  border: 1px solid transparent;
+  border-radius: 16px;
+  /* transition: 0.3s ease-in-out; */
+  box-shadow: 0px 0px 12px rgb(0, 0, 0, 30%);
+  background: #fff;
+
+}
+.container .middle .quickmenu ul {
+  width: 120 px;
+  padding: 20px 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container .middle .quickmenu ul li{
+  /* display: flex; */
+  text-align: center;
+  margin-top: 20px;
+  /* transition: 0.3s; */
+}
+
+.container .middle .quickmenu ul li .icon{
+  width: 60px;
+  height: 60px;
+  /* border: 1px solid #d9d9d9; */
+  border-radius: 50%;
+  background-color: #fafaf8 !important;
+  display: block;
+  margin: 0 auto;
+  transition: 0.3s;
+}
+
+.container .middle .quickmenu ul li .icon1{
+  background: url('quick-ico01.png') no-repeat center / 30px ;
+}
+.container .middle .quickmenu ul li .icon2{
+  background: url('quick-ico02.png') no-repeat center / 30px ;
+}
+.container .middle .quickmenu ul li .icon3{
+  background: url('quick-ico03.png') no-repeat center / 30px ;
+}
+.container .middle .quickmenu ul li .icon4{
+  background: url('kakao_chat.png') no-repeat center / 30px ;
+}
+.container .middle .quickmenu ul li:hover .icon{
+  background-color: rgb(222, 220, 220) !important;
+}
+.container .middle .quickmenu ul li span{
+  font-size: 12px;
 }
