--- a/Web Project/reserve.css
+++ b/Web Project/reserve.css
@@ -3,6 +3,99 @@ body {
   /* height: 100%; */
   font-size: 14px;
 }
+/* header */
+header {
+  height: 80px;
+  width: 100%;
+  background: #fff;
+  z-index: 1000;
+  
+  position: fixed;
+  opacity: 0.7;
+  border-bottom: 1px solid lightgray;
+}
+.whole {
+  width: 80%;
+  margin: 0 auto;
+}
+header:hover {
+  opacity: 1;
+}
+
+header .nav ul {
+  /* display: block; */
+  line-height: 50px;
+}
+header .nav .out .detail{
+  background: #fff;
+  width: 170px;
+  height: 400px;
+  padding-top: 10px;
+  padding-left: 0;
+  display: none;
+}
+header .nav .out .detail li {
+  font-size: 14px;
+  width: fit-content;
+  padding: 0 20px;
+}
+header .nav .out .detail li:first-child {
+  margin-top: 10px;
+}
+
+header .nav .out a {
+  padding-bottom: 14px;
+
+}
+
+header .nav .out li.b {
+  
+  font-weight: 700;
+  padding-right: 30px;
+}
+header .nav .out li.b a.B:hover {
+  display: block;
+  color: #89c1c5;
+  border-bottom: 4px solid #89c1c5;
+  
+}
+h
+header .nav .out .b .detail li:hover {
+  border-bottom: 1px solid red;
+}
+header .nav li {
+  /* background: red; */
+  float: left;
+  /* padding-right: 30px; */
+  list-style: none;
+  font-size: 17px;
+  /* display: inline; */
+  height: 40px;
+}
+header .nav select {
+  margin-top: 20px;
+  /* float: left; */
+}
+header .title{
+  float: left;
+  width: 160px;
+  margin-left: 100px;
+  margin-right: 300px;
+}
+
+header .title a {
+  background: url('logo.png') top / cover no-repeat;
+  margin: 10px;
+  padding: 5px;
+  z-index: 3000;
+  display: block;
+  background-size: 100% auto !important;
+  height: 30px;
+
+}
+header .title span{
+  display: none;
+}
 
 /* banner style */
 .main .banner {
@@ -179,4 +272,32 @@ body {
 .main .content .bottom a:hover{
   color:#fff;
   background: #5aafae;
+}
+
+/* footer */
+.total_footer {
+  background: #5AAfAE;
+  width: 100%;
+}
+.total_footer .sub_footer {
+  padding: 40px 20px;
+  margin: 0 auto;
+  width: 60%;
+}
+.total_logo {
+  padding-left: 170px;
+  position: relative;
+}
+.total_footer .sub_footer .logo {
+  background: url('f-logo.png') no-repeat left center;
+  width: 100px;
+  height: 30px;
+  background-size: 100%;
+  position: absolute;
+  left: 0;
+  top: 1px;
+}
+.total_footer .sub_footer .total_logo p {
+  color: #fff;
+  line-height: 15px;
 }
