--- a/Web Project/pickup.css
+++ b/Web Project/pickup.css
@@ -27,22 +27,62 @@ body{
   margin-bottom: 30px;
   letter-spacing: -5px;
 }
-/* .bar 시작 */
-.container .bar {
+/* bar style */
+.container .bar{                                   
+  /* background: lightcyan;  */
   width: 100%;
   margin: 0 auto;
-  /* padding: 20px; */
   border-bottom: 1px solid #d9d9d9;
 }
-.container .bar section{
-  border: 1px solid #000;
 
-  margin: 0 auto;
-  padding-left: 60px;
-  box-sizing: border-box;
+.container .bar section .home_menu{
   height: 60px;
   position: relative;
+  width: 70%;
+  margin: 0 auto;
 }
+
+.bar section .home_menu #pic {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  float: left;
+  width: 60px;
+  height: 60px;
+  background: url('ico-home.png') #5aafae center no-repeat;
+}
+
+.bar section .home_menu ul {
+  width: 200px;
+  height: 60px;
+  /* display: block; */
+  font-size: 16px;
+  margin: 0 0 0 60px;
+  padding-left: 20px;
+  position: relative;
+
+  float: left;
+  line-height: 60px;
+  border-right: 1px solid lightgray;
+}
+
+/* .container .home_menu ul #list {
+  width: 100%;
+} */
+
+
+.bar section .home_menu li {
+  text-decoration: none;
+  display: none;
+}
+
+.bar section .home_menu ul a {
+  content: '';
+  padding-right: 130px;
+  background: url('contNav-arr.png') no-repeat right;
+}
+
+
 /* 메인 콘텐츠 */
 .container .middle {
   margin: 0 auto;
